image stretch up issue fixed

--- a/src/css/list.css
+++ b/src/css/list.css
@@ -138,6 +138,7 @@ img {
     width: 100%;
     height: 260px;
     border-radius: 10px 10px 0px 0px;
+    object-fit: cover;
 }
 
 
